@@ -44,13 +44,3 @@ user jukebox
 mixer /dev/mixer
 # The channel to control
 channel pcm
-
-# URL of the web interface
-url http://jukebox.anjou.terraraq.org.uk/
-
-# Stopwords (i.e. ignored words) for the track search facility.
-stopword 01 02 03 04 05 06 07 08 09 10
-stopword 1 2 3 4 5 6 7 8 9
-stopword 11 12 13 14 15 16 17 18 19 20
-stopword 21 22 23 24 25 26 27 28 29 30
-stopword the a an and to too in on of we i am as im for is
